# ostis-ui

./: .clang-format  .gitignore  CMakeLists.txt  ConanPresets.json  README.md  conanfile.py  repo.path
docs/: changelog.md  container-diagram.d2  context-diagram.d2  html-translator-component-diagram.d2  html-translator-update-diagram.d2  user_interface_formalisation.gwf
kb/: new_ui.html  themes.scs  ui_model.gwf  user_profile.scs
kb/demo/: demo_ui.scs  page_template.j2
kb/new_ostis_ui_components/: text_html.gwf  textarea.gwf  ui_model.gwf
kb/ostis-ui-components/: text_output.scs
template-agent/: CMakeLists.txt  SpecifiedStringTemplateAgent.cpp  SpecifiedStringTemplateAgent.hpp  SpecifiedStringTemplateKeynodes.cpp  SpecifiedStringTemplateKeynodes.hpp  SpecifiedStringTemplateModule.cpp  SpecifiedStringTemplateModule.hpp
template-agent/agent/: SpecifiedStringTemplateAgent.cpp  SpecifiedStringTemplateAgent.hpp
template-agent/keynodes/: SpecifiedStringTemplateKeynodes.cpp  SpecifiedStringTemplateKeynodes.hpp
template-agent/renderer/: StringTemplateRenderer.cpp  StringTemplateRenderer.hpp
template-agent/tests/: CMakeLists.txt  template_variables_search_test.cpp
template-agent/tests/repo/: strings1.scdb
template-agent/tests/test-structures/: no_variables_string_template.scs  not_all_variables_string_template.scs  one_variable_string_template.scs  three_variables_string_template.scs  two_variables_string_template.scs  zero_variables_string_template.scs
template-agent/tests/units/: SpecifiedStringTemplateAgentTest.cpp  StringTemplateRendererTest.cpp
template-agent/tests/units/repo/: strings1.scdb
translators/: CMakeLists.txt
translators/HTMLTranslatorModule/: CMakeLists.txt  HTMLTranslatorModule.cpp  HTMLTranslatorModule.hpp  HTTPRequestHandler.cpp  HTTPRequestHandler.hpp  HTTPServer.cpp  HTTPServer.hpp
translators/HTMLTranslatorModule/agents/: AdaptationManagerAgent.cpp  AdaptationManagerAgent.hpp  HTMLTranslatorAgent.cpp  HTMLTranslatorAgent.hpp  ThemeSwitcherAgent.cpp  ThemeSwitcherAgent.hpp  UIComponentsReorderAgent.cpp  UIComponentsReorderAgent.hpp  VisualAdaptationAgent.cpp  VisualAdaptationAgent.hpp
translators/HTMLTranslatorModule/html-translator/: HTMLTranslator.cpp  HTMLTranslator.hpp
translators/HTMLTranslatorModule/kb/: adaptation.scs  common.scs
translators/HTMLTranslatorModule/kb/common/: color_template.scs  decomposition_template.scs  text_weight.scs
translators/HTMLTranslatorModule/kb/html-implementations/ostis-ui-kit/: common.scs  style.css
translators/HTMLTranslatorModule/kb/html-implementations/ostis-ui-kit/button/: size_class_template.scs
translators/HTMLTranslatorModule/kb/html-implementations/ostis-ui-kit/button_component/: button_component.j2  button_component.scs  size_class_template.scs
translators/HTMLTranslatorModule/kb/html-implementations/ostis-ui-kit/common_properties/: color_template.scs
translators/HTMLTranslatorModule/kb/html-implementations/ostis-ui-kit/page/: page.scs
translators/HTMLTranslatorModule/kb/html-implementations/ostis-ui-kit/text_output/: text_component.j2  text_component.scs  text_size_class.scs
translators/HTMLTranslatorModule/keynodes/: HTMLTranslatorKeynodes.cpp  HTMLTranslatorKeynodes.hpp
translators/HTMLTranslatorModule/parameter-retriever/: ParameterRetriever.cpp  ParameterRetriever.hpp
translators/HTMLTranslatorModule/tests/: CMakeLists.txt
translators/HTMLTranslatorModule/tests/test-structures/: ontology.scs  test_reorder_components.scs  test_reorder_three_slots.scs  test_translate_button.scs  test_translate_button_decomposition.scs  test_translate_demo_ui.scs  test_translate_text_output.scs
translators/HTMLTranslatorModule/tests/test-structures/kb/common/: color_template.scs  decomposition_template.scs  text_weight.scs
translators/HTMLTranslatorModule/tests/test-structures/kb/html-implementations/ostis-ui-kit/: common.scs
translators/HTMLTranslatorModule/tests/test-structures/kb/html-implementations/ostis-ui-kit/page/: page.scs
translators/HTMLTranslatorModule/tests/test-structures/kb/html-implementations/ostis-ui-kit/text_output/: text_size.scs
translators/HTMLTranslatorModule/tests/units/: HTMLTranslationAgentTest.cpp  HTMLTranslationTest.cpp  UIComponentsReorderTest.cpp  utils.cpp  utils.hpp
translators/HTMLTranslatorModule/tests/units/repo/: strings1.scdb
